# NOSFERA-Core

./: README.md
libCognito/: CMakeLists.txt
libCognito/include/libcognito/: libcognito.h
libCognito/src/: libcognito.cpp  main.cpp
nosfera-client/: index.html  package-lock.json  package.json
nosfera-client/public/: libcognito.js  libcognito.wasm
nosfera-client/src/: App.tsx  index.css
nosfera-client/src/hooks/: useLibCognito.ts
